mode window, not TRUE/FALSE, we should better follow that. Note that most
man pages claim that this function returns void, but this is definitely
wrong.

(269) Dan Torop's patch to fix joystick polling times (resolves bug 1206856)

**************************************************************************
* 25 May 2005 -- 2.4.0 Release Candidate 4 Released
**************************************************************************

(270) Takeshi Nishimura's changes to make the Windows mouse wheel/button mapping match that of X11; also fixing a typo in the associated mouse callback argument list.

**************************************************************************
* 2 Jun 2005 -- 2.4.0 Release Candidate 5 Released
**************************************************************************

**************************************************************************
* 9 Jun 2005 -- 2.4.0 Released
**************************************************************************

**************************************************************************
* Changes in late June 2005
**************************************************************************

(271) Added an RPM spec file based on the one shipped with SuSE 9.3.

(272) Implemented Joe Krahn's "Input Devices" code--at the moment, a dial
box.

(273) Fixed a bug in the Sierpinski sponge code that caused the application
to crash if it called the code with a negative number of levels

(274) Added --enable-debug configure flag. Currently it only turns on X11
event tracing, but in the future we could add more.

(275) Cleaned up CreateNotify/ConfigureNotify handling.

(276) When a window is iconified, only an UnmapNotify is sent, not a
VisibilityNotify, so we have to handle the window status callback in the
former case, too. This fixes bug #763442 (Call the visibility callback when
minimizing a window).

(277) Removed redundant files from EXTRA_DIST.